
*****

Added CONTRIBUTING.md file.

*****

Bumped bibmanager version to 1.2.0rc1.
(pre-release).


*****  Thu Jan 23 21:21:04 CET 2020  *****

Refactored u.KeyWordCompleter() class for a cleaner code.
Stop sorting keywords (only keyword options).
Prevent error when tab-completing after keywords that are no
variables of a Bib() object.

*****

Implemented u.KeyPathCompleter() class to enable path completions.
First, suggest keywords, then suggest keyword-options, and finally
suggest files in system.

*****

Enabled bottom-toolbar info for PDFs in u.AlwaysPassValidator().

*****

Reworded bibm pdf prompt text (more descriptive).

*****

Added history to PDF-related prompts.

*****

Couple of tweaks in tests to prevent creating files while testing.


*****  So 26. Jan 16:38:17 CET 2020  *****

Adjusted u.KeyWordCompleter() to offer value options only when
key ends with a colon (improve ADS-searches).

Tweaked u.AutoSuggestCompleter() to parse text in the same way as
u.KeyWordCompleter() does.

*****

Use u.KeyWordCompleter() instead of a WordCompleter() in the
cli_ads_search() function.
Some other minor tweaks in screen outputs.
Adjusted CLI tests.

*****

Added gifs to docs (search and fetch commands) to show auto-complete
behavior.

*****

Added 'Featured Articles' into the docs home.

*****

Added the gif files.

*****

Updated API docs.

*****

Added exceptions for file not found in lm.compile_latex() and
lm.compile_pdflatex() functions.
Enable passing argument without extension. 
Added respective tests.

*****

Catch file-not-found errors when compiling latex files via the CLI
Added respective tests.
This resolves #31


*****  Mon Jan 27 08:57:49 CET 2020  *****

Bumped bibmanager version to 1.2.0rc2.


*****  Di 28. Jan 09:34:52 CET 2020  *****

Ensured to expand user of PDF files in cli_link() function.

*****

Bumped bibmanager version to 1.2.0rc3.

*****

Fixed bug from last edit when pdf is None.

*****

Bumped bibmanager version to 1.2.0rc4.
